# archify-backend

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml
app/: __init__.py
app/api/: __init__.py  dependencies.py
app/api/endpoints/: admin.py  app_configs.py  architectures.py  auth.py  code_language.py  images.py  patterns.py  patterns_code.py  profile_settings.py  projects.py  settings.py  users.py
app/domain/: utils.py
app/domain/app_configs/: dtos.py  models.py  ports.py  services.py
app/domain/architectures/: dtos.py  models.py  ports.py  services.py
app/domain/auth/: __init__.py  dtos.py  ports.py  services.py
app/domain/code_languages/: __init__.py  dtos.py  models.py  ports.py  services.py
app/domain/images/: __init__.py  dtos.py  models.py  ports.py  services.py
app/domain/patterns/: dtos.py  models.py  ports.py  services.py
app/domain/patterns_code/: __init__.py  dtos.py  models.py  ports.py  services.py
app/domain/profile_settings/: dtos.py  models.py  ports.py  services.py
app/domain/projects/: dtos.py  models.py  ports.py  services.py
app/domain/settings/: dtos.py  models.py  ports.py  services.py
app/domain/users/: models.py  ports.py  services.py
app/infrastructure/supabase/: __init__.py  adapters.py  app_configs_repository.py  architecture_repository.py  (+10 more)
database_dump/: package-lock.json  package.json
database_dump/supabase/: architectures_rows.sql  config.toml  seed.sql
skills/conventional-commit-message/: SKILL.md
supabase/: storage_bucket.sql
templates/: index.html
utils/: renderer.py
(+3 files in other folders)
